# documindr

./: .dockerignore  .env.example  .gitignore  Caddyfile  Dockerfile  Makefile  README.md  docker-compose.yml  pyproject.toml  requirements.txt
app/: main.py
app/api/routes/: chat.py  documents.py  health.py  root.py  upload.py
app/api/schemas/: base.py  chat.py  documents.py  health.py  response.py  root.py  upload.py
app/core/: config.py  cors.py  exceptions.py  logger.py  ratelimit.py
app/domain/documents/: hashing.py  loader.py  splitter.py
app/domain/embeddings/: provider.py
app/domain/rag/: model.py  prompts.py  retrieval.py  streaming.py
app/domain/uploads/: processor.py
app/infra/database/: connection.py  queries.py
db/: init-db.sql
docs/: endpoint-flows.md  getting-started.md  uv-guide.md
scripts/: ollama-init.sh
tests/: conftest.py
tests/integration/: test_chat.py  test_health.py  test_root.py  test_summary.py  test_upload.py
tests/unit/: test_chunk_size.py  test_fix_percent.py  test_hashing.py  test_loader.py  test_prompts.py  test_rate_limit.py  test_validate_extension.py
