[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "rag-chatbot"
version = "1.0.0"
description = "RAG chatbot with Postgres and Ollama"
readme = "README.md"
requires-python = "==3.13.*"
dependencies = [
    "pytest>=9.0.1",
    "boto3>=1.42.4",
    "pgvector>=0.4.2",
    "aiofiles>=25.1.0",
    "rank-bm25>=0.2.2",
    "langchain>=0.3.27",
    "python-dotenv>=1.2.1",
    "langchain-ollama>=0.3.10",
    "psycopg[binary,pool]>=3.3.1",
    "fastapi[standard]>=0.123.10",
    "langchain-community>=0.3.31",
    "langchain-unstructured>=0.1.5",
    "unstructured[docx,pdf,pptx]>=0.18.21",
]

[tool.setuptools.packages.find]
where = ["."]
include = ["app*"]
exclude = ["db*", "tests*", "scripts*", "docs*"]